--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,11 +10,11 @@ python = "^3.11"
 openai = "^1.7.0"
 python-dotenv = "^1.0.0"
 gradio = "^4.14.0"
-opencv-python = "^4.9.0.80"
 streamlit = "^1.39.0"
 pillow = "^10.4.0"
 anthropic = "^0.34.2"
 poppler-utils = "^0.1.0"
+opencv-python-headless = "^4.10.0.84"
 
 
 [build-system]
